# cameroon-administrative-data-platform

./: .gitignore  LICENSE  MATH_FORMEL.md  README.md  TECHNICAL_REPORT.md  diagnostic_output.txt  environment.yml  pyproject.toml  requirements.txt
data/output/: cameroon_complete_dataset.csv  optimized_parameters.json  population_2005.csv  population_2010.csv  population_2015.csv  population_2020.csv  population_2025.csv  population_report.csv  results.txt  summary.json  summary_by_arrondissement.csv  summary_by_department.csv  summary_by_region.csv
src/core/: __init__.py  config.py  data_exporter.py  diagnostic.py  generate_dataset.py  geospatial_loader.py  hierarchy_builder.py  hierarchy_matcher.py  optimized_parameters.py  pdf_parser.py  population_distributor.py  population_simulator.py  postal_codes.py  run_optimization.py  validator.py  wof_hierarchy.py
src/scripts/: check_data.py  run_dashboard.sh
src/visualization/: dashboard.py
